fix identicon generation iOS

--- a/src/keyguard.css
+++ b/src/keyguard.css
@@ -48,7 +48,7 @@
     padding-bottom: 18px;
 }
 
-#app > * > * {
+#app .x-route-container > * > * {
     flex-direction: column;
     align-items: center;
 }
@@ -100,4 +100,8 @@ x-identicon {
     display: block;
     height: 160px;
     width: 160px;
+}
+
+.x-route-container {
+    min-height: calc(100vh - 120px);
 }
